[docs] Describe the jdk21/jdk22plus SDK split instead of the retired per-JDK SDKs
installation.rst still advertised SDKMAN candidates 5.0.0-jdk25/-jdk26/-jdk27 and
Maven Central suffixes to match, and faq.rst still listed "JDK 21" and "JDK 25" as
the supported set. After the SDK consolidation those artifacts do not exist: the
build profiles are jdk21 and jdk22plus, and the jdk22plus SDK is built once and runs
on every JDK from 22 to 27.

Replace the stale lists with the two families and a table giving the one distinction
that matters -- jdk21 is --enable-preview and therefore pinned to exactly JDK 21,
while jdk22plus carries no preview features and stays forward compatible. The
graal-jdk-21 bullet stays: that profile is still live in pom.xml, Makefile and
bin/compile.

Note the release pipeline has NOT been updated for the consolidation and is tracked
separately: scripts/build-release-sdks.py still drives --jdk jdk25/26/27, whose Maven
profiles no longer exist and whose SDK_JDK_CONTRACT lookup falls back to (21, True).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>