@@ -17,14 +17,31 @@ Via SDKMAN!:
    sdk install tornadovm                              # default: latest version, JDK 21, OpenCL backend
    sdk install tornadovm <version>-<jdk-version>-<backend>
    # e.g.:
-   sdk install tornadovm 5.0.0-jdk21-cuda
-   sdk install tornadovm 5.0.0-jdk25-metal
-   sdk install tornadovm 5.0.0-jdk26-opencl
-   sdk install tornadovm 5.0.0-jdk27-opencl
+   sdk install tornadovm 5.2.1-jdk21-cuda
+   sdk install tornadovm 5.2.1-jdk22plus-metal
+   sdk install tornadovm 5.2.1-jdk22plus-opencl
 
-To install a specific JDK and/or backend combination, pass the candidate version as ``<version>-<jdk-version>-<backend>`` (``<jdk-version>`` is one of ``jdk21``, ``jdk25``, ``jdk26``, ``jdk27``; ``<backend>`` is ``opencl``, ``cuda``, ``metal``, or ``full`` for all backends). Run ``sdk list tornadovm`` to see all available combinations.
+To install a specific JDK and/or backend combination, pass the candidate version as ``<version>-<jdk-version>-<backend>`` (``<backend>`` is ``opencl``, ``cuda``, ``metal``, or ``full`` for all backends). Run ``sdk list tornadovm`` to see all available combinations.
 
-The TornadoVM API is also published on Maven Central, so you can add it directly to an existing Java project without installing the SDK at all. The artifact version's suffix must match the JDK you run on: ``-jdk21``, ``-jdk25``, ``-jdk26``, or ``-jdk27``.
+There are two SDK families, and ``<jdk-version>`` selects between them:
+
+.. list-table::
+   :header-rows: 1
+   :widths: 20 20 60
+
+   * - ``<jdk-version>``
+     - Runs on
+     - Notes
+   * - ``jdk21``
+     - JDK 21 only
+     - Compiled with ``--enable-preview``, which pins the class files to exactly JDK 21.
+   * - ``jdk22plus``
+     - JDK 22 and newer
+     - One SDK for every JDK from 22 up, including 27. No preview features, so the class files stay forward compatible.
+
+Only the JDK 21 SDK is tied to a single JDK. The ``jdk22plus`` SDK is built once and runs unchanged on any JDK from 22 onwards — switching JDK needs no reinstall and no rebuild, only ``tornado --generate-argfile`` if you launch via the argfile rather than the ``tornado`` command.
+
+The TornadoVM API is also published on Maven Central, so you can add it directly to an existing Java project without installing the SDK at all. The artifact version's suffix must match the SDK family you run on: ``-jdk21`` or ``-jdk22plus``.
 
 .. code-block:: xml
 
@@ -32,14 +49,14 @@ The TornadoVM API is also published on Maven Central, so you can add it directly
    <dependency>
       <groupId>io.github.beehive-lab</groupId>
       <artifactId>tornado-api</artifactId>
-      <version>5.2.0-jdk21</version>
+      <version>5.2.1-jdk21</version>
    </dependency>
 
-   <!-- JDK 25 -->
+   <!-- JDK 22 and newer, including 27 -->
    <dependency>
       <groupId>io.github.beehive-lab</groupId>
       <artifactId>tornado-api</artifactId>
-      <version>5.0.0-jdk25</version>
+      <version>5.2.1-jdk22plus</version>
    </dependency>
 
 Docker images and cloud (AWS) images are also available; see :ref:`docker` and :ref:`cloud`.
